--- a/LibreHardwareMonitorAfterburnerPlugin.csproj
+++ b/LibreHardwareMonitorAfterburnerPlugin.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <PropertyGroup Label="8337224c9ad9e356:PreProc">
     <DebugType Condition="'$(DebugType)'!='full' And '$(DebugType)'!='pdbonly'" Label="8337224c9ad9e356:PreProc">pdbonly</DebugType>
   </PropertyGroup>
@@ -52,10 +55,11 @@
     <DllExportILMerge>LibreHardwareMonitor.dll LibreHardwareMonitorLib.dll HidSharp.dll</DllExportILMerge>
     <DllExportPostProcType>0</DllExportPostProcType>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
-  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LibreHardwareMonitorLib, Version=0.8.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\LibreHardwareMonitor\bin\Release\net452\LibreHardwareMonitorLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -114,10 +118,7 @@
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="ilmerge">
-      <Version>3.0.29</Version>
-    </PackageReference>
-    <PackageReference Include="LibreHardwareMonitorLib">
-      <Version>0.8.7</Version>
+      <Version>3.0.41</Version>
     </PackageReference>
     <PackageReference Include="System.Management">
       <Version>4.7.0</Version>
