--- a/LibreHardwareMonitorAfterburnerPlugin.csproj
+++ b/LibreHardwareMonitorAfterburnerPlugin.csproj
@@ -56,10 +56,6 @@
     <DllExportPostProcType>0</DllExportPostProcType>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LibreHardwareMonitorLib, Version=0.8.8.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\LibreHardwareMonitor\bin\Release\net452\LibreHardwareMonitorLib.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -120,8 +116,11 @@
     <PackageReference Include="ilmerge">
       <Version>3.0.41</Version>
     </PackageReference>
+    <PackageReference Include="LibreHardwareMonitorLib">
+      <Version>0.9.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Management">
-      <Version>4.7.0</Version>
+      <Version>6.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
