Add new groups and sensor types
from updated LibreHardwareMonitorLib version.

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -53,5 +53,11 @@
     <Setting Name="FactorEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="BatteryEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="PsuEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
