--- a/app.config
+++ b/app.config
@@ -58,6 +58,12 @@
             <setting name="FactorEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="BatteryEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="PsuEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
         </LibreHardwareMonitorAfterburnerPlugin.Properties.Settings>
     </userSettings>
 </configuration>
