--- a/LibreHardwareMonitorAfterburnerPlugin.csproj
+++ b/LibreHardwareMonitorAfterburnerPlugin.csproj
@@ -36,9 +36,9 @@
   <ItemGroup>
     <PackageReference Include="PolySharp" Version="1.15.0" />
     <PackageReference Include="DllExport" Version="1.8.0" PrivateAssets="true" />
-    <PackageReference Include="HidSharp" Version="2.1.0" />
-    <PackageReference Include="LibreHardwareMonitorLib" Version="0.9.4" />
-    <PackageReference Include="System.Memory" Version="4.6.2" />
+    <PackageReference Include="HidSharp" Version="2.6.3" />
+    <PackageReference Include="LibreHardwareMonitorLib" Version="0.9.5-pre503" />
+    <PackageReference Include="System.Memory" Version="4.6.3" />
   </ItemGroup>
 
   <Import Project="DllExport.targets" />
