Add proper name to release workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Create Release Draft
         uses: softprops/action-gh-release@v2
         with:
+          name: ${{ format('{0} {1}', contains(github.ref_name, '-') && 'Pre-release' || 'Release', github.ref_name }}
           files: bin/Release/net48/win-x86/LibreHardwareMonitor.dll
           draft: true
           prerelease: ${{ contains(github.ref_name, '-') }}
